--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "gulp-webp-css": "^1.1.0",
     "gulp-webp-html": "^1.0.2",
     "gulp-webp-html-nosvg": "^1.1.1",
+    "gulp-webp-retina-html": "^1.2.0",
+    "jest": "^29.7.0",
+    "jsdom": "^22.1.0",
     "sass": "^1.64.1"
   },
   "dependencies": {
